feat(api): add patient optimistic concurrency [WUL-15] [WUL-16]
